# azureml-infra-foundation

./: .env.example  .gitignore  README.md  pyproject.toml
infra/azure-ml-vnet/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
infra/terraform/: README.md  bastion_jumpbox.tf  jumpbox_vm.tf  main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf
infra/terraform-quickstart/: README.md  main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf
